<resources>
    <string name="app_name">GUAVA</string>
    <string name="btn_txt0">메인</string>
    <string name="btn_txt1">밥뭐먹</string>
    <string name="btn_txt2">탭2</string>
    <string name="btn_txt3">탭3</string>
    <string name="btn_menu_txt0">특식</string>
    <string name="btn_menu_txt1">찌개</string>
    <string name="btn_menu_txt2">덮/볶음밥</string>
    <string name="btn_menu_txt3">해장</string>
    <string name="btn_menu_txt4">랜덤</string>
    <string name="btn_menu_txt5">면</string>
    <string name="btn_menu_txt6">기타</string>
    <string name="btn_menu_txt7">간편식</string>
    <string name="btn_menu_txt8">국/탕</string>
    <string name="textView_txt0">참고 : JOBKOREA 점심룰렛</string>
    <string name="textView_txt1">Acitivity 2</string>
    <string name="textView_txt2">Acitivity 3</string>
</resources>